name:                cursor
version:             0.1
description:         Comonadic generalization of zipper
homepage:            https://github.com/iokasimov/cursor
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/cursor.git

library
  exposed-modules:
    Data.Cursor
  other-modules:
    Data.Cursor.Here
    Data.Cursor.There
  build-depends: base == 4.*, free, comonad, lens, these, natural-transformation
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
  default-extensions: TypeOperators, LambdaCase
